Prevent card from sticking to page top on mobile

--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ body {
 
 main {
   flex: 1;
+  padding-block: 2rem;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
